[gd_scene load_steps=10 format=3 uid="uid://cj8uchem8a4fk"]

[ext_resource type="Script" path="res://Menu/Menu.gd" id="1_i4tr5"]
[ext_resource type="Theme" uid="uid://b3kq74llqlv3x" path="res://ui theme/MinimalUI.tres" id="2_unpnr"]

[sub_resource type="LabelSettings" id="LabelSettings_x1bde"]
font_size = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u05j4"]

[sub_resource type="Animation" id="Animation_hv5u1"]
resource_name = "win"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:theme_override_styles/panel:bg_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.766667, 2.16667, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.0823529, 0.0823529, 0.0823529, 0), Color(0.0823529, 0.0823529, 0.0823529, 0.329412), Color(0.0823529, 0.0823529, 0.0823529, 0.584314), Color(0.0823529, 0.0823529, 0.0823529, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:label_settings:shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.2, 2.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0.282353, 0, 0), Color(0, 0.282353, 0, 0), Color(0, 0.282353, 0, 0.670588), Color(0, 0, 0, 0.670588)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:label_settings:shadow_offset")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 2.16667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -50), Vector2(-1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:label_settings:font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.766667, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:label_settings:outline_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qixt4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.6, 0.6, 0.6, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:label_settings:shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.670588)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:label_settings:shadow_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3.615, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:label_settings:font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:label_settings:outline_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:label_settings:shadow_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_eewsl"]
resource_name = "loose"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:theme_override_styles/panel:bg_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.766667, 2.16667, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.0823529, 0.0823529, 0.0823529, 0), Color(0.0823529, 0.0823529, 0.0823529, 0.329412), Color(0.0823529, 0.0823529, 0.0823529, 0.584314), Color(0.0823529, 0.0823529, 0.0823529, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:label_settings:shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.2, 2.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0.282353, 0, 0), Color(0.448185, 0, 0.0366201, 0), Color(0.806163, 0, 0.0948306, 0.670588), Color(0, 0, 0, 0.670588)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:label_settings:shadow_offset")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 1.83333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -50), Vector2(-1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:label_settings:font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.566667, 1.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:label_settings:outline_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.13333, 1.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:label_settings:shadow_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.566667, 1.86667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [30, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_22i1g"]
_data = {
"RESET": SubResource("Animation_qixt4"),
"lose": SubResource("Animation_eewsl"),
"win": SubResource("Animation_hv5u1")
}

[sub_resource type="LabelSettings" id="LabelSettings_cqvkx"]
font_size = 66
outline_size = 5
shadow_size = 13
shadow_color = Color(0, 0, 0, 0.670588)
shadow_offset = Vector2(-3.615, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_unpnr")
script = ExtResource("1_i4tr5")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.0
offset_right = 63.0
offset_bottom = 69.0
grow_horizontal = 2
theme = ExtResource("2_unpnr")
theme_override_colors/font_color = Color(0.611765, 0.611765, 0.611765, 1)
theme_override_font_sizes/font_size = 50
text = "TRUC"

[node name="Quitter" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -87.0
offset_right = 60.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_unpnr")
theme_override_colors/font_color = Color(0.505882, 0.505882, 0.505882, 1)
theme_override_font_sizes/font_size = 30
text = "Quitter"

[node name="Option" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -166.0
offset_right = 56.0
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_unpnr")
theme_override_colors/font_color = Color(0.505882, 0.505882, 0.505882, 1)
theme_override_font_sizes/font_size = 30
text = "Option"

[node name="Jouer" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 68.0
offset_right = 51.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_unpnr")
theme_override_colors/font_color = Color(0.505882, 0.505882, 0.505882, 1)
theme_override_font_sizes/font_size = 30
text = "Jouer"

[node name="Solo" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 236.0
offset_right = 51.0
offset_bottom = 289.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_unpnr")
theme_override_colors/font_color = Color(0.505882, 0.505882, 0.505882, 1)
theme_override_font_sizes/font_size = 30
text = "Solo"

[node name="Multi" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -309.0
offset_top = 68.0
offset_right = 315.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_unpnr")

[node name="VBoxContainer" type="VBoxContainer" parent="Multi"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_right = -193.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_unpnr")

[node name="HBoxContainer" type="HBoxContainer" parent="Multi/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_unpnr")
alignment = 1

[node name="Join" type="Button" parent="Multi/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_unpnr")
text = "Join"

[node name="Host" type="Button" parent="Multi/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_unpnr")
text = "Host"

[node name="Label3" type="Label" parent="Multi/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_unpnr")
text = "lobby id:"
horizontal_alignment = 1

[node name="TextEdit3" type="TextEdit" parent="Multi/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_unpnr")
theme_override_font_sizes/font_size = 24
text = "127.0.0.1"

[node name="Type" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -309.0
offset_top = 68.0
offset_right = 315.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_unpnr")

[node name="VBoxContainer" type="VBoxContainer" parent="Type"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_right = -193.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_unpnr")

[node name="HBoxContainer" type="HBoxContainer" parent="Type/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_unpnr")
alignment = 1

[node name="Lan" type="Button" parent="Type/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_unpnr")
text = "Lan
"

[node name="Steam" type="Button" parent="Type/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_unpnr")
text = "Steam"

[node name="Waiting" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_unpnr")

[node name="Label" type="Label" parent="Waiting"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.5
offset_top = 102.0
offset_right = 64.5
offset_bottom = 171.0
grow_horizontal = 2
theme = ExtResource("2_unpnr")
theme_override_colors/font_color = Color(0.611765, 0.611765, 0.611765, 1)
theme_override_font_sizes/font_size = 50
text = "Waiting For Players ..."
label_settings = SubResource("LabelSettings_x1bde")
horizontal_alignment = 1

[node name="Start" type="Button" parent="Waiting"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -15.5
offset_right = 23.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_unpnr")
text = "Start"

[node name="End_Screen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="End_Screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u05j4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="End_Screen"]
libraries = {
"": SubResource("AnimationLibrary_22i1g")
}

[node name="Label" type="Label" parent="End_Screen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -171.5
offset_top = 100.0
offset_right = 171.5
offset_bottom = 212.0
grow_horizontal = 2
text = "You Win"
label_settings = SubResource("LabelSettings_cqvkx")
horizontal_alignment = 1

[connection signal="pressed" from="Quitter" to="." method="_on_quitter_pressed"]
[connection signal="pressed" from="Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="Jouer" to="." method="_on_jouer_pressed"]
[connection signal="pressed" from="Solo" to="." method="_on_solo_pressed"]
[connection signal="pressed" from="Multi/VBoxContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Multi/VBoxContainer/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="gui_input" from="Multi/VBoxContainer/Label3" to="." method="_on_label_gui_input"]
[connection signal="pressed" from="Type/VBoxContainer/HBoxContainer/Lan" to="." method="_on_lan_pressed"]
[connection signal="pressed" from="Type/VBoxContainer/HBoxContainer/Steam" to="." method="_on_steam_pressed"]
[connection signal="pressed" from="Waiting/Start" to="." method="_on_start_pressed"]
